--- a/Math_Computing/tables/table_1.tex
+++ b/Math_Computing/tables/table_1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{|c|c|p{5cm}|}
 \hline
-\textbf{Symbol} & \textbf{Value} & \textbf{Description} \\
+\textbf{Parameter} & \textbf{Value} & \textbf{Description} \\
 \hline
 $\theta_1$ & $30\degree$ & $\angle{BAD} = \angle{ABE}$ \\
 \hline
